# tensor_selenium_tests

./: .gitignore  conftest.py  pyproject.toml
pages/: base_page.py
pages/saby/: contacts_page.py  downolad_page.py  main_page.py
pages/tensor/: about_page.py  main_page.py
tests/: test_scenarios.py
tools/: helpers.py
